--- a/index.html
+++ b/index.html
@@ -55,10 +55,10 @@
 <section id="contact" class="section">
     <h2>Contact Us</h2>
     <p>Main Office: Chennai, India</p>
-    <p>Email: ultraservesystems@gmail.com</p>
-    <p>Phone: +91 00000 00000</p>
+    <p>Email: ultraserve@hotmail.com</p>
+    <p>Phone: +91 99400 10520</p>
     <br>
-    <a class="btn" href="https://wa.me/91XXXXXXXXXX" target="_blank">WhatsApp Us</a>
+    <a class="btn" href="https://wa.me/919940010520" target="_blank">WhatsApp Us</a>
 </section>
 
 <footer>
