--- a/services.html
+++ b/services.html
@@ -33,13 +33,24 @@
         <h3>Products (Human)</h3>
 
 <ul class="product-list">
-    <li onclick="openSpec('products/human/portable-x1.pdf')">
-        Portable Ultrasound X1
+    <li onclick="openSpec('products/human/ds30plus.pdf')">
+        DS 30 Plus
     </li>
 
-    <li onclick="openSpec('products/human/doppler-z5.jpg')">
-        Colour Doppler Z5
+    <li onclick="openSpec('products/human/ds50plus.pdf')">
+        DS 50 Plus
     </li>
+
+    <li onclick="openSpec('products/human/ds100plus.pdf')">
+        DS 100 Plus
+    </li>
+
+    <li onclick="openSpec('products/human/ds150plus.pdf')">
+    </li>
+
+    <li onclick="openSpec('products/human/ds200plus.pdf')">
+    </li>
+    
 </ul>
         <h3>Services (Human)</h3>
         <ul>
@@ -56,8 +67,36 @@
         <h3>Products (Veterinary)</h3>
 
 <ul class="product-list">
-    <li onclick="openSpec('products/veterinary/vet-scan-pro.pdf')">
-        Vet Scan Pro
+    <li onclick="openSpec('products/veterinary/ds30plusvet.pdf')">
+        DS 30 Plus Vet
+    </li>
+    
+    <li onclick="openSpec('products/veterinary/ds50plusvet.pdf')">
+        DS 50 Plus Vet
+    </li>
+
+    <li onclick="openSpec('products/veterinary/ds100plusvet.pdf')">
+        DS 100 Plus Vet
+    </li>
+
+    <li onclick="openSpec('products/veterinary/ds150plusvet.pdf')">
+        DS 150 Plus Vet
+    </li>
+
+    <li onclick="openSpec('products/veterinary/ds200plusvet.pdf')">
+        DS 200 Plus Vet
+    </li>
+
+    <li onclick="openSpec('products/veterinary/sonoscapeE2V.pdf')">
+        Sonoscape E2V
+    </li>
+
+    <li onclick="openSpec('products/veterinary/sonoscapes12.pdf')">
+        Sonoscape S12
+    </li>
+
+    <li onclick="openSpec('products/veterinary/sonoscapepropet60.pdf')">
+        Sonoscape Propet 60
     </li>
 </ul>
         <h3>Services (Veterinary)</h3>
@@ -87,3 +126,4 @@
 
 </body>
 </html>
+
