--- a/services.html
+++ b/services.html
@@ -46,9 +46,11 @@
     </li>
 
     <li onclick="openSpec('products/human/ds150plus.pdf')">
+        DS 150 Plus
     </li>
 
     <li onclick="openSpec('products/human/ds200plus.pdf')">
+        DS 200 Plus
     </li>
     
 </ul>
@@ -126,4 +128,5 @@
 
 </body>
 </html>
+
 
